--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
-PaperAR.xcodeproj/xcuserdata/
+ARKitInteraction.xcodeproj/project.xcworkspace/xcuserdata/
+ARKitInteraction.xcodeproj/xcuserdata/
+.DS_Store
